ultimas modificaciones, mixins y variables

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <div class="banner"><img src="./img/Rectangle 2.png" alt="Imagen Guitarrista Banner"></div>
             <div>
                 <ul class="brandBar">
-                    <li><a href=""><img class="brandImg" src="./img/fender.png" alt="Logo Fender"></a></li>
-                    <li><a href=""><img class="brandImg"src="./img/gibson.png" alt="Logo Gibson"></a></li>
-                    <li><a href=""><img class="brandImg"src="./img/123.png" alt="Logo PRS"></a></li>
-                    <li><a href=""><img class="brandImg"src="./img/33.png" alt="Logo Suhr"></a></li>
-                    <li><a href=""><img class="brandImg"src="./img/44.png" alt="Logo Epiphone"></a></li>
-                    <li><a href=""><img class="brandImg"src="./img/marshall.png" alt="Logo Marshall"></a></li>
+                    <li><a href="https://www.fender.com/es/start" target="blank"><img class="brandImg" src="./img/fender.png" alt="Logo Fender"></a></li>
+                    <li><a href="https://www.gibson.com/en-US/" target="blank"><img class="brandImg"src="./img/gibson.png" alt="Logo Gibson"></a></li>
+                    <li><a href="https://prsguitars.com/" target="blank"><img class="brandImg"src="./img/123.png" alt="Logo PRS"></a></li>
+                    <li><a href="https://www.suhr.com/" target="blank"><img class="brandImg"src="./img/33.png" alt="Logo Suhr"></a></li>
+                    <li><a href="https://www.epiphone.com/en-US/" target="blank"><img class="brandImg"src="./img/44.png" alt="Logo Epiphone"></a></li>
+                    <li><a href="https://marshall.com/" target="blank"><img class="brandImg"src="./img/marshall.png" alt="Logo Marshall"></a></li>
                 </ul>
             </div>
         </header>
