--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -39,12 +39,12 @@
             <div class="container-fluid banner"><img src="../img/Rectangle 2.png" alt="Imagen Guitarrista Banner"></div>
             <div>
                 <ul class="brandBar">
-                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt="Logo Fender"></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt="Logo Gibson"></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/123.png" alt="Logo PRS"></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/33.png" alt="Logo Suhr"></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/44.png" alt="Logo Epiphone"></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt="Logo Marshall"></a></li>
+                    <li><a href="https://www.fender.com/es/start" target="blank"><img class="brandImg" src="../img/fender.png" alt="Logo Fender"></a></li>
+                    <li><a href="https://www.gibson.com/en-US/" target="blank"><img class="brandImg"src="../img/gibson.png" alt="Logo Gibson"></a></li>
+                    <li><a href="https://prsguitars.com/" target="blank"><img class="brandImg"src="../img/123.png" alt="Logo PRS"></a></li>
+                    <li><a href="https://www.suhr.com/" target="blank"><img class="brandImg"src="../img/33.png" alt="Logo Suhr"></a></li>
+                    <li><a href="https://www.epiphone.com/en-US/" target="blank"><img class="brandImg"src="../img/44.png" alt="Logo Epiphone"></a></li>
+                    <li><a href="https://marshall.com/" target="blank"><img class="brandImg"src="../img/marshall.png" alt="Logo Marshall"></a></li>
                 </ul>
             </div>
         </header>
@@ -55,8 +55,7 @@
                     <div class="row"><h1 class="qh1">¿Quienes Somos?</h1></div>
                     <div class="row qText">
                         <div class="col">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
+                            <p>Somos una tienda de música ubicada en Buenos Aires, fundada en el año 2022. Nos especializamos en guitarras de todo tipo, especialmente de gama alta y profesional.</p>
                         </div>
                     </div>
                     <div class="row qText">
