Hago las últimas modificaciones para la entrega final y agrego README.MD

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -30,15 +30,15 @@
                     </ul>
                 </nav>
             </div>
-            <div class="banner"><img src="../img/Rectangle 2.png" alt="Imagen Guitarrista Banner"></div>
+            <div class="banner"><img src="../img/banner2.png" alt="Imagen Guitarrista Banner"></div>
             <div>
                 <ul class="brandBar">
-                    <li><a href="https://www.fender.com/es/start" target="blank"><img class="brandImg" src="../img/fender.png" alt="Logo Fender"></a></li>
-                    <li><a href="https://www.gibson.com/en-US/" target="blank"><img class="brandImg"src="../img/gibson.png" alt="Logo Gibson"></a></li>
-                    <li><a href="https://prsguitars.com/" target="blank"><img class="brandImg"src="../img/123.png" alt="Logo PRS"></a></li>
-                    <li><a href="https://www.suhr.com/" target="blank"><img class="brandImg"src="../img/33.png" alt="Logo Suhr"></a></li>
-                    <li><a href="https://www.epiphone.com/en-US/" target="blank"><img class="brandImg"src="../img/44.png" alt="Logo Epiphone"></a></li>
-                    <li><a href="https://marshall.com/" target="blank"><img class="brandImg"src="../img/marshall.png" alt="Logo Marshall"></a></li>
+                    <li><a href="https://www.fender.com/es/start" target="_blank"><img class="brandImg" src="../img/fender.png" alt="Logo Fender"></a></li>
+                    <li><a href="https://www.gibson.com/en-US/" target="_blank"><img class="brandImg"src="../img/gibson.png" alt="Logo Gibson"></a></li>
+                    <li><a href="https://prsguitars.com/" target="_blank"><img class="brandImg"src="../img/123.png" alt="Logo PRS"></a></li>
+                    <li><a href="https://www.suhr.com/" target="_blank"><img class="brandImg"src="../img/33.png" alt="Logo Suhr"></a></li>
+                    <li><a href="https://www.epiphone.com/en-US/" target="_blank"><img class="brandImg"src="../img/44.png" alt="Logo Epiphone"></a></li>
+                    <li><a href="https://marshall.com/" target="_blank"><img class="brandImg"src="../img/marshall.png" alt="Logo Marshall"></a></li>
                 </ul>
             </div>
         </header>
@@ -102,10 +102,10 @@
                         <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
                         <div class="footerBoxLista">
                             <ul class="footerBoxListaUL">
-                                <li><a href=""><img src="../img/instagram.png" alt="Logo Instagram"></a></li>
-                                <li><a href=""><img src="../img/facebook.png" alt="Logo Facebook"></a></li>
-                                <li><a href=""><img src="../img/telefono.png" alt="Logo Telefono"></a></li>
-                                <li><a href=""><img src="../img/mail.png" alt="Logo Mail"></a></li>
+                                <li><a href="https://www.instagram.com/" target="blank"><img src="../img/instagram.png" alt="Logo Instagram"></a></li>
+                                <li><a href="https://www.facebook.com/" target="blank"><img src="../img/facebook.png" alt="Logo Facebook"></a></li>
+                                <li><a href="https://www.whatsapp.com/" target="blank"><img src="../img/telefono.png" alt="Logo Telefono"></a></li>
+                                <li><a href="https://www.gmail.com/" target="blank"><img src="../img/mail.png" alt="Logo Mail"></a></li>
                             </ul>
                         </div>
                     </section>
