--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -55,7 +55,7 @@
                     <div class="row"><h1 class="qh1">¿Quienes Somos?</h1></div>
                     <div class="row qText">
                         <div class="col">
-                            <p>Somos una tienda de música ubicada en Buenos Aires, fundada en el año 2022. Nos especializamos en guitarras de todo tipo, especialmente de gama alta y profesional.</p>
+                            <p>Somos una tienda de música ubicada en Buenos Aires, fundada en el año 2022. Nos especializamos en <strong>guitarras</strong> de todo tipo, especialmente de gama alta y profesional.</p>
                         </div>
                     </div>
                     <div class="row qText">
@@ -67,14 +67,15 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-12">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
+                            <p>FV Guitars nace en <strong>Buenos Aires</strong> como una pequeña tienda de venta de instrumentos usados. Con el paso del tiempo, fuimos ganando popularidad hasta convertirnos en una de las tiendas de música <strong>más importantes de Argentina.</strong></p>
+
+                            <p>Contamos con <strong>dos locales</strong> ubicados en CABA y trabajamos con las <strong>mejores marcas</strong> de instrumentos profesionales, como <strong>Fender</strong>, <strong>Gibson</strong>, <strong>Martin</strong>, <strong>PRS</strong>, <strong>Marshall</strong>, entre otros. También contamos con una amplia gama de <strong>accesorios</strong> e <strong>instrumentos para principiantes</strong> que quieran aventurarse en el viaje de la música. También contamos con un equipo de <strong>profesionales expertos</strong> que te van a <strong>asesorar</strong> y responder todas tus dudas.</p>
+
+                            <p>¡Vení y llevate tu primer guitarra! ¡Te esperamos!</p>
                         </div>
                     </div>
                     <div class="row qText">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -106,10 +107,10 @@
                         <p>Seguinos en nuestras redes</p>
                     </div>
                     <ul class="row footerBootLista justify-content-center">
-                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/instagram.png" alt="Logo Instagram"></a></li>
-                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/facebook.png" alt="Logo Facebook"></a></li>
-                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/telefono.png" alt="Logo Telefono"></a></li>
-                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/mail.png" alt="Logo Mail"></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Logo Instagram"></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href="https://www.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="Logo Facebook"></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href="https://www.whatsapp.com/" target="_blank"><img src="../img/telefono.png" alt="Logo Telefono"></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href="https://www.gmail.com/" target="_blank"><img src="../img/mail.png" alt="Logo Mail"></a></li>
                     </ul>
                 </div>
             </div>
